docs(14): create phase plan - 5 plans in 3 waves

--- a/.planning/phases/14-map-questions-to-encounters/14-01-PLAN.md
+++ b/.planning/phases/14-map-questions-to-encounters/14-01-PLAN.md
@@ -5,44 +5,43 @@ type: execute
 wave: 1
 depends_on: []
 files_modified:
-  - pokefirered/tools/quiz/inventory_species.py
-  - pokefirered/data/questions/species_map.json
-  - pokefirered/include/quiz/questions_gen.h
-  - pokefirered/src/quiz/questions_gen.c
+  - pokefirered/include/quiz/section_config.h
+  - pokefirered/src/quiz/section_config.c
+  - pokefirered/data/questions/map_topics.json
+  - pokefirered/data/questions/section_config.json
 autonomous: true
 
 must_haves:
   truths:
-    - "All 130 wild encounter species have question bank mappings"
-    - "Each species has 5 questions assigned from the 727 available"
-    - "Generated C code compiles without errors"
+    - "Quiz_GetSectionForMap(mapId) returns correct section (1-8) for any map"
+    - "map_topics.json defines topic pools for all game maps"
+    - "Section boundaries align with gym progression"
   artifacts:
-    - path: "pokefirered/tools/quiz/inventory_species.py"
-      provides: "Species extraction from wild_encounters.json"
-      min_lines: 50
-    - path: "pokefirered/data/questions/species_map.json"
-      provides: "All species → question mappings"
-      contains: "SPECIES_ABRA"
-    - path: "pokefirered/src/quiz/questions_gen.c"
-      provides: "Generated question banks for all species"
-      contains: "gQuizBank_SPECIES_ABRA"
+    - path: "pokefirered/include/quiz/section_config.h"
+      provides: "Section constants and Quiz_GetSectionForMap declaration"
+      contains: "QUIZ_NUM_SECTIONS"
+    - path: "pokefirered/src/quiz/section_config.c"
+      provides: "Map-to-section lookup implementation"
+      contains: "Quiz_GetSectionForMap"
+    - path: "pokefirered/data/questions/map_topics.json"
+      provides: "Topic pool configuration per map"
+      contains: "question_pool_by_map"
   key_links:
-    - from: "pokefirered/tools/quiz/inventory_species.py"
-      to: "pokefirered/data/questions/species_map.json"
-      via: "JSON output"
-      pattern: "json.dump"
-    - from: "pokefirered/data/questions/species_map.json"
-      to: "pokefirered/src/quiz/questions_gen.c"
-      via: "build_questions.py"
-      pattern: "gQuizBank_SPECIES_"
+    - from: "pokefirered/src/quiz/section_config.c"
+      to: "constants/map_groups.h"
+      via: "MAP_* constants in switch statement"
+      pattern: "case MAP_"
 ---
 
 <objective>
-Expand species_map.json to cover all 130 wild encounter species with question assignments.
+Create section infrastructure: constants, map-to-section mapping, and topic configuration files.
 
-Purpose: Currently only 12 species have question banks. This plan inventories all encounterable species from wild_encounters.json and assigns questions from the 727 available, enabling full game coverage.
+Purpose: Establish the foundation for section-based question selection by defining the 8-section structure, creating the map lookup function, and configuring topic pools per map location.
 
-Output: Updated species_map.json with all species, regenerated questions_gen.c/.h with ~130 question banks.
+Output: 
+- section_config.h/c with Quiz_GetSectionForMap() lookup
+- map_topics.json with validated topic configuration from 14-CONTEXT.md
+- section_config.json with section boundaries
 </objective>
 
 <execution_context>
@@ -54,126 +53,210 @@ Output: Updated species_map.json with all species, regenerated questions_gen.c/.
 @.planning/PROJECT.md
 @.planning/ROADMAP.md
 @.planning/STATE.md
+@.planning/phases/14-map-questions-to-encounters/14-CONTEXT.md
 @.planning/phases/14-map-questions-to-encounters/14-RESEARCH.md
-
-@pokefirered/data/questions/species_map.json
-@pokefirered/tools/quiz/build_questions.py
-@pokefirered/src/data/wild_encounters.json
+@pokefirered/include/constants/map_groups.h
 </context>
 
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create species inventory script</name>
-  <files>pokefirered/tools/quiz/inventory_species.py</files>
+  <name>Task 1: Create section_config.h with constants</name>
+  <files>pokefirered/include/quiz/section_config.h</files>
   <action>
-Create a Python script that:
-1. Parses `pokefirered/src/data/wild_encounters.json` to extract all unique species
-2. Groups species by map for reference (output as comment in JSON)
-3. Loads existing `species_map.json` to preserve current 12 species' question assignments
-4. Loads `questions.csv` to get all available question IDs (727 valid)
-5. Assigns 5 questions per species, distributing evenly across difficulty levels where possible
-6. Outputs expanded `species_map.json` maintaining the existing format:
-   ```json
-   {
-     "SPECIES_NAME": {
-       "maps": ["MAP_XYZ"],
-       "difficulty_range": [1, 5],
-       "questions": ["CH03-001", "CH03-002", ...]
-     }
-   }
+Create new header file with:
+
+1. Include guard `GUARD_SECTION_CONFIG_H`
+2. Include `"global.h"`
+3. Define constants:
+   ```c
+   #define QUIZ_NUM_SECTIONS 8
+   #define QUIZ_SECTION_BROCK     1
+   #define QUIZ_SECTION_MISTY     2
+   #define QUIZ_SECTION_SURGE     3
+   #define QUIZ_SECTION_ERIKA     4
+   #define QUIZ_SECTION_KOGA      5
+   #define QUIZ_SECTION_SABRINA   6
+   #define QUIZ_SECTION_BLAINE    7
+   #define QUIZ_SECTION_CHAMPION  8
    ```
-
-Question assignment strategy:
-- Preserve existing 12 species' question assignments exactly
-- For new species, assign 5 questions round-robin from available pool
-- Track which questions are already assigned to avoid duplicates where possible
-- If 727 questions / 130 species = ~5.6 per species, some sharing is acceptable
-
-The script should:
-- Accept `--encounters` path to wild_encounters.json
-- Accept `--questions` path to questions.csv  
-- Accept `--existing` path to current species_map.json
-- Accept `--output` path for expanded species_map.json
-- Print summary: species count, questions assigned, any warnings
-
-Usage: `python inventory_species.py --encounters ../src/data/wild_encounters.json --questions ../data/questions/questions.csv --existing ../data/questions/species_map.json --output ../data/questions/species_map.json`
+4. Declare function: `u8 Quiz_GetSectionForMap(u16 mapId);`
+5. Declare function: `u8 Quiz_GetCurrentSection(void);` (gets section from current map)
   </action>
-  <verify>
-Run: `cd pokefirered/tools/quiz && python inventory_species.py --help`
-Verify script accepts expected arguments.
-  </verify>
-  <done>
-Script exists, parses wild_encounters.json, extracts 130 unique species, and can generate expanded species_map.json.
-  </done>
+  <verify>File exists and compiles: `cd pokefirered && make include/quiz/section_config.h.o 2>&1 | head -5` (should not error on header)</verify>
+  <done>Header file defines QUIZ_NUM_SECTIONS=8, section constants 1-8, and declares Quiz_GetSectionForMap and Quiz_GetCurrentSection</done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Generate expanded species_map.json and rebuild C code</name>
+  <name>Task 2: Create section_config.c with map lookup</name>
+  <files>pokefirered/src/quiz/section_config.c</files>
+  <action>
+Create new source file implementing Quiz_GetSectionForMap():
+
+1. Include headers:
+   ```c
+   #include "global.h"
+   #include "quiz/section_config.h"
+   #include "constants/map_groups.h"
+   #include "fieldmap.h"  // For gMapHeader
+   ```
+
+2. Implement `Quiz_GetSectionForMap(u16 mapId)` with switch statement covering ALL map IDs from 14-CONTEXT.md:
+
+Section 1 (Pre-Brock):
+- MAP_PALLET_TOWN, MAP_ROUTE1, MAP_VIRIDIAN_CITY, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_PEWTER_CITY
+- Plus interiors: MAP_VIRIDIAN_FOREST (no separate interior)
+
+Section 2 (Pre-Misty):
+- MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F, MAP_ROUTE4, MAP_CERULEAN_CITY, MAP_ROUTE24, MAP_ROUTE25
+
+Section 3 (Pre-Surge):
+- MAP_ROUTE5, MAP_ROUTE6, MAP_VERMILION_CITY, MAP_S_S_ANNE_* (all floors), MAP_ROUTE11, MAP_DIGLETTS_CAVE, MAP_DIGLETTS_CAVE_NORTH
+
+Section 4 (Pre-Erika):
+- MAP_ROUTE9, MAP_ROUTE10, MAP_ROCK_TUNNEL_1F, MAP_ROCK_TUNNEL_B1F, MAP_LAVENDER_TOWN, MAP_CELADON_CITY, MAP_POKEMON_TOWER_* (all floors)
+
+Section 5 (Pre-Koga):
+- MAP_ROUTE12, MAP_ROUTE13, MAP_ROUTE14, MAP_ROUTE15, MAP_FUCHSIA_CITY, MAP_SAFARI_ZONE_* (all areas)
+
+Section 6 (Pre-Sabrina):
+- MAP_SAFFRON_CITY, MAP_SILPH_CO_* (all floors)
+
+Section 7 (Pre-Blaine):
+- MAP_ROUTE19, MAP_ROUTE20, MAP_ROUTE21, MAP_SEAFOAM_ISLANDS_* (all floors), MAP_CINNABAR_ISLAND, MAP_POKEMON_MANSION_* (all floors)
+
+Section 8 (Pre-Champion):
+- MAP_ROUTE22, MAP_ROUTE23, MAP_VICTORY_ROAD_* (all floors), MAP_INDIGO_PLATEAU_*
+
+Default: Return 1 for unmapped areas
+
+3. Implement `Quiz_GetCurrentSection()`:
+   ```c
+   u8 Quiz_GetCurrentSection(void)
+   {
+       return Quiz_GetSectionForMap(gMapHeader.mapLayoutId);
+   }
+   ```
+   Note: If mapLayoutId doesn't work, use `(gSaveBlock1Ptr->location.mapGroup << 8) | gSaveBlock1Ptr->location.mapNum`
+  </action>
+  <verify>Build compiles: `cd pokefirered && make -j4 2>&1 | tail -10` (check for section_config.o in output, no errors)</verify>
+  <done>section_config.c compiles and Quiz_GetSectionForMap returns correct section for each map group</done>
+</task>
+
+<task type="auto">
+  <name>Task 3: Create JSON configuration files</name>
   <files>
-pokefirered/data/questions/species_map.json
-pokefirered/include/quiz/questions_gen.h
-pokefirered/src/quiz/questions_gen.c
+    pokefirered/data/questions/map_topics.json
+    pokefirered/data/questions/section_config.json
   </files>
   <action>
-1. Run the inventory script to generate expanded species_map.json:
-   ```bash
-   cd pokefirered/tools/quiz
-   python inventory_species.py \
-     --encounters ../../src/data/wild_encounters.json \
-     --questions ../../data/questions/questions.csv \
-     --existing ../../data/questions/species_map.json \
-     --output ../../data/questions/species_map.json
-   ```
+Create two JSON configuration files that the build tools will consume:
 
-2. Verify the expanded species_map.json:
-   - Contains all 130 species from wild_encounters.json
-   - Each species has 5 questions assigned
-   - Original 12 species retain their existing question assignments
+1. **section_config.json** - Section boundaries and gym gates:
+```json
+{
+  "_comment": "Section definitions for quiz system - maps gym progression to sections",
+  "sections": {
+    "1": {
+      "name": "Pre-Brock",
+      "gym_gate": "BROCK",
+      "maps": ["PALLET_TOWN", "ROUTE1", "VIRIDIAN_CITY", "VIRIDIAN_FOREST", "ROUTE2", "PEWTER_CITY"]
+    },
+    "2": {
+      "name": "Pre-Misty", 
+      "gym_gate": "MISTY",
+      "maps": ["ROUTE3", "MT_MOON_1F", "MT_MOON_B1F", "MT_MOON_B2F", "ROUTE4", "CERULEAN_CITY", "ROUTE24", "ROUTE25"]
+    },
+    "3": {
+      "name": "Pre-Surge",
+      "gym_gate": "LT_SURGE",
+      "maps": ["ROUTE5", "ROUTE6", "VERMILION_CITY", "SS_ANNE", "ROUTE11", "DIGLETTS_CAVE"]
+    },
+    "4": {
+      "name": "Pre-Erika",
+      "gym_gate": "ERIKA",
+      "maps": ["ROUTE9", "ROUTE10", "ROCK_TUNNEL", "LAVENDER_TOWN", "CELADON_CITY", "POKEMON_TOWER"]
+    },
+    "5": {
+      "name": "Pre-Koga",
+      "gym_gate": "KOGA",
+      "maps": ["ROUTE12", "ROUTE13", "ROUTE14", "ROUTE15", "FUCHSIA_CITY", "SAFARI_ZONE"]
+    },
+    "6": {
+      "name": "Pre-Sabrina",
+      "gym_gate": "SABRINA",
+      "maps": ["SAFFRON_CITY", "SILPH_CO"]
+    },
+    "7": {
+      "name": "Pre-Blaine",
+      "gym_gate": "BLAINE",
+      "maps": ["ROUTE19", "ROUTE20", "ROUTE21", "SEAFOAM_ISLANDS", "CINNABAR_ISLAND", "POKEMON_MANSION"]
+    },
+    "8": {
+      "name": "Pre-Champion",
+      "gym_gate": "CHAMPION",
+      "maps": ["ROUTE22", "ROUTE23", "VICTORY_ROAD", "INDIGO_PLATEAU"]
+    }
+  }
+}
+```
 
-3. Run build_questions.py to regenerate C code:
-   ```bash
-   cd pokefirered/data/questions
-   python ../../tools/quiz/build_questions.py questions.csv \
-     --mapping species_map.json \
-     --out-dir ../../
-   ```
-
-4. Verify generated files:
-   - `include/quiz/questions_gen.h` has extern declarations for all ~130 banks
-   - `src/quiz/questions_gen.c` has all `gQuizBank_SPECIES_*` definitions
-   - `Quiz_GetBank()` switch statement covers all 130 species
-
-5. Build to verify compilation:
-   ```bash
-   cd pokefirered && make -j4
-   ```
+2. **map_topics.json** - Copy the EXACT topic configuration from 14-CONTEXT.md:
+```json
+{
+  "_comment": "Topic pools per map - generated from 14-CONTEXT.md",
+  "question_pool_by_map": {
+    "MAP_PALLET_TOWN": [
+      {"category": "Plan Provisions", "topic": "Product Design"},
+      {"category": "Manual Rates", "topic": "Dental Claim Costs"},
+      {"category": "Plan Provisions", "topic": "Life Insurance"},
+      {"category": "Plan Provisions", "topic": "ACA Regulations"},
+      {"category": "Underwriting", "topic": "General Principles"}
+    ],
+    "MAP_ROUTE1": [
+      {"category": "Plan Provisions", "topic": "Product Design"},
+      {"category": "Manual Rates", "topic": "Dental Claim Costs"},
+      {"category": "Plan Provisions", "topic": "Life Insurance"},
+      {"category": "Plan Provisions", "topic": "ACA Regulations"},
+      {"category": "Underwriting", "topic": "General Principles"}
+    ]
+  },
+  "gyms_by_map": {
+    "MAP_PEWTER_CITY_GYM": {
+      "gym": 1,
+      "mastery_pool": [
+        {"category": "Plan Provisions", "topic": "Product Design"},
+        {"category": "Manual Rates", "topic": "Dental Claim Costs"},
+        {"category": "Plan Provisions", "topic": "Life Insurance"},
+        {"category": "Underwriting", "topic": "General Principles"}
+      ]
+    }
+  }
+}
+```
+Include ALL entries from the `question_pool_by_map` and `gyms_by_map` sections in 14-CONTEXT.md.
   </action>
-  <verify>
-- `grep -c "gQuizBank_SPECIES" pokefirered/include/quiz/questions_gen.h` returns ~130
-- `grep -c "case SPECIES_" pokefirered/src/quiz/questions_gen.c` returns ~130
-- `make` completes without errors
-  </verify>
-  <done>
-species_map.json contains 130 species, questions_gen.c/.h generated with all banks, project compiles.
-  </done>
+  <verify>JSON is valid: `python3 -c "import json; json.load(open('pokefirered/data/questions/map_topics.json'))"` returns no errors</verify>
+  <done>Both JSON files exist with complete topic configuration matching 14-CONTEXT.md</done>
 </task>
 
 </tasks>
 
 <verification>
-1. species_map.json has entries for all 130 wild encounter species
-2. Each species entry has exactly 5 questions assigned
-3. questions_gen.h declares extern for ~130 gQuizBank_SPECIES_* structs
-4. questions_gen.c defines all banks and Quiz_GetBank() switch covers all species
-5. Project builds without errors
+1. `pokefirered/include/quiz/section_config.h` exists with QUIZ_NUM_SECTIONS=8
+2. `pokefirered/src/quiz/section_config.c` compiles without errors
+3. `pokefirered/data/questions/map_topics.json` is valid JSON
+4. `pokefirered/data/questions/section_config.json` is valid JSON
+5. Full build: `cd pokefirered && make -j4` succeeds
 </verification>
 
 <success_criteria>
-- [ ] inventory_species.py created and functional
-- [ ] species_map.json expanded from 12 to 130 species
-- [ ] questions_gen.c/.h regenerated with all species banks
-- [ ] `make` succeeds with no compilation errors
+- QUIZ_NUM_SECTIONS constant defined as 8
+- Quiz_GetSectionForMap() implemented with all map ID mappings
+- Quiz_GetCurrentSection() returns section based on player's current map
+- map_topics.json contains all topic pools from 14-CONTEXT.md
+- section_config.json defines all 8 sections with gym gates
+- Build compiles without errors
 </success_criteria>
 
 <output>
