--- a/.planning/phases/14-map-questions-to-encounters/14-03-PLAN.md
+++ b/.planning/phases/14-map-questions-to-encounters/14-03-PLAN.md
@@ -2,41 +2,53 @@
 phase: 14-map-questions-to-encounters
 plan: 03
 type: execute
-wave: 3
-depends_on: ["14-02"]
+wave: 2
+depends_on: ["14-01"]
 files_modified:
-  - pokefirered/src/quiz/quiz.c
-  - pokefirered/include/quiz/quiz.h
+  - pokefirered/tools/quiz/build_questions.py
+  - pokefirered/include/quiz/topic_pools.h
+  - pokefirered/src/quiz/topic_pools.c
+  - pokefirered/include/quiz/questions_gen.h
+  - pokefirered/src/quiz/questions_gen.c
 autonomous: true
 
 must_haves:
   truths:
-    - "Gym battles pull questions from all prior area species"
-    - "Area pool is built dynamically based on gym index"
-    - "Each gym has access to progressively more species' questions"
+    - "Questions are grouped by Broad_Category + Sub_Topic into topic pools"
+    - "Quiz_GetTopicPool(category, topic) returns pool with question pointers and count"
+    - "Quiz_GetMapConfig(mapId) returns topic pool references for the map"
+    - "Topic pools are const ROM data (no dynamic allocation)"
   artifacts:
-    - path: "pokefirered/src/quiz/quiz.c"
-      provides: "Dynamic area pool building by gym"
-      contains: "Quiz_BuildAreaPoolForGym"
-    - path: "pokefirered/include/quiz/quiz.h"
-      provides: "Gym area mapping declarations (if needed)"
+    - path: "pokefirered/include/quiz/topic_pools.h"
+      provides: "Topic pool structures and lookup declarations"
+      contains: "struct QuizTopicPool"
+    - path: "pokefirered/src/quiz/topic_pools.c"
+      provides: "Generated topic-indexed question pools"
+      contains: "gQuizTopicPool_"
+    - path: "pokefirered/tools/quiz/build_questions.py"
+      provides: "Updated build script generating topic pools"
+      contains: "generate_topic_pools"
   key_links:
-    - from: "pokefirered/src/quiz/quiz.c"
-      to: "gWildMonHeaders"
-      via: "Wild encounter data lookup"
-      pattern: "gWildMonHeaders"
-    - from: "pokefirered/src/quiz/quiz.c"
-      to: "Quiz_GetBank"
-      via: "Species bank lookup"
-      pattern: "Quiz_GetBank"
+    - from: "pokefirered/src/quiz/topic_pools.c"
+      to: "pokefirered/src/quiz/questions_gen.c"
+      via: "Question struct references"
+      pattern: "sQuestion_"
+    - from: "pokefirered/tools/quiz/build_questions.py"
+      to: "pokefirered/data/questions/map_topics.json"
+      via: "JSON config loading"
+      pattern: "map_topics.json"
 ---
 
 <objective>
-Implement dynamic area pool building for gym battles based on prior traversed areas.
+Modify build tools to generate topic-indexed question pools instead of only species-indexed banks.
 
-Purpose: Currently Quiz_BuildAreaPool() is hardcoded for Route 1/Viridian Forest/Route 2. With full game coverage, each gym needs to aggregate questions from ALL areas the player has traversed before reaching that gym. This plan creates a data-driven approach.
+Purpose: Enable question selection by map topic rather than species. The build script will read map_topics.json and generate topic pools that quiz.c can use at runtime.
 
-Output: Quiz_BuildAreaPool() replaced with dynamic gym-based lookup that aggregates species from prior areas.
+Output:
+- Updated build_questions.py that generates topic pools
+- topic_pools.h with pool structures and declarations
+- topic_pools.c with generated topic pool data
+- Updated questions_gen.h/c with topic pool support
 </objective>
 
 <execution_context>
@@ -48,329 +60,410 @@ Output: Quiz_BuildAreaPool() replaced with dynamic gym-based lookup that aggrega
 @.planning/PROJECT.md
 @.planning/ROADMAP.md
 @.planning/STATE.md
+@.planning/phases/14-map-questions-to-encounters/14-CONTEXT.md
 @.planning/phases/14-map-questions-to-encounters/14-RESEARCH.md
 @.planning/phases/14-map-questions-to-encounters/14-01-SUMMARY.md
-@.planning/phases/14-map-questions-to-encounters/14-02-SUMMARY.md
-
-@pokefirered/src/quiz/quiz.c
-@pokefirered/src/data/wild_encounters.json
-@pokefirered/include/constants/map_groups.h
+@pokefirered/tools/quiz/build_questions.py
+@pokefirered/data/questions/map_topics.json
 </context>
 
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create gym-to-prior-areas mapping table</name>
-  <files>pokefirered/src/quiz/quiz.c</files>
+  <name>Task 1: Update build_questions.py to generate topic pools</name>
+  <files>pokefirered/tools/quiz/build_questions.py</files>
   <action>
-Add a data table mapping each gym to the maps the player would have traversed before reaching it.
+Modify build_questions.py to add topic pool generation:
 
-After the includes section in quiz.c, add:
-
-```c
-// ============================================
-// Gym Area Progression Tables
-// ============================================
-
-// Maps accessible before each gym leader
-// Brock (Pewter): Route 1, Viridian Forest, Route 2, Route 22
-static const u16 sBrockGymAreas[] = {
-    MAP_ROUTE1,
-    MAP_VIRIDIAN_FOREST,
-    MAP_ROUTE2,
-    MAP_ROUTE22,
-};
-
-// Misty (Cerulean): Prior + Route 3, Mt Moon, Route 4, Route 24, Route 25
-static const u16 sMistyGymAreas[] = {
-    MAP_ROUTE1, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_ROUTE22,
-    MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F,
-    MAP_ROUTE4, MAP_ROUTE24, MAP_ROUTE25,
-};
-
-// Lt. Surge (Vermilion): Prior + Route 5, Route 6, Route 11, Diglett's Cave
-static const u16 sSurgeGymAreas[] = {
-    MAP_ROUTE1, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_ROUTE22,
-    MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F,
-    MAP_ROUTE4, MAP_ROUTE24, MAP_ROUTE25,
-    MAP_ROUTE5, MAP_ROUTE6, MAP_ROUTE11, MAP_DIGLETTS_CAVE,
-};
-
-// Erika (Celadon): Prior + Route 7, Route 8, Route 9, Route 10, Rock Tunnel
-static const u16 sErikaGymAreas[] = {
-    MAP_ROUTE1, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_ROUTE22,
-    MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F,
-    MAP_ROUTE4, MAP_ROUTE24, MAP_ROUTE25,
-    MAP_ROUTE5, MAP_ROUTE6, MAP_ROUTE11, MAP_DIGLETTS_CAVE,
-    MAP_ROUTE7, MAP_ROUTE8, MAP_ROUTE9, MAP_ROUTE10, 
-    MAP_ROCK_TUNNEL_1F, MAP_ROCK_TUNNEL_B1F,
-};
-
-// Koga (Fuchsia): Prior + Route 12, Route 13, Route 14, Route 15, Safari Zone
-static const u16 sKogaGymAreas[] = {
-    MAP_ROUTE1, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_ROUTE22,
-    MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F,
-    MAP_ROUTE4, MAP_ROUTE24, MAP_ROUTE25,
-    MAP_ROUTE5, MAP_ROUTE6, MAP_ROUTE11, MAP_DIGLETTS_CAVE,
-    MAP_ROUTE7, MAP_ROUTE8, MAP_ROUTE9, MAP_ROUTE10,
-    MAP_ROCK_TUNNEL_1F, MAP_ROCK_TUNNEL_B1F,
-    MAP_ROUTE12, MAP_ROUTE13, MAP_ROUTE14, MAP_ROUTE15,
-    MAP_SAFARI_ZONE_CENTER, MAP_SAFARI_ZONE_EAST,
-    MAP_SAFARI_ZONE_NORTH, MAP_SAFARI_ZONE_WEST,
-};
-
-// Sabrina (Saffron): Same as Koga (accessible around same time)
-static const u16 sSabrinaGymAreas[] = {
-    MAP_ROUTE1, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_ROUTE22,
-    MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F,
-    MAP_ROUTE4, MAP_ROUTE24, MAP_ROUTE25,
-    MAP_ROUTE5, MAP_ROUTE6, MAP_ROUTE11, MAP_DIGLETTS_CAVE,
-    MAP_ROUTE7, MAP_ROUTE8, MAP_ROUTE9, MAP_ROUTE10,
-    MAP_ROCK_TUNNEL_1F, MAP_ROCK_TUNNEL_B1F,
-    MAP_ROUTE12, MAP_ROUTE13, MAP_ROUTE14, MAP_ROUTE15,
-    MAP_POKEMON_TOWER_3F, MAP_POKEMON_TOWER_4F,
-    MAP_POKEMON_TOWER_5F, MAP_POKEMON_TOWER_6F, MAP_POKEMON_TOWER_7F,
-};
-
-// Blaine (Cinnabar): Prior + Route 19, Route 20, Route 21, Seafoam, Pokemon Mansion
-static const u16 sBlaineGymAreas[] = {
-    MAP_ROUTE1, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_ROUTE22,
-    MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F,
-    MAP_ROUTE4, MAP_ROUTE24, MAP_ROUTE25,
-    MAP_ROUTE5, MAP_ROUTE6, MAP_ROUTE11, MAP_DIGLETTS_CAVE,
-    MAP_ROUTE7, MAP_ROUTE8, MAP_ROUTE9, MAP_ROUTE10,
-    MAP_ROCK_TUNNEL_1F, MAP_ROCK_TUNNEL_B1F,
-    MAP_ROUTE12, MAP_ROUTE13, MAP_ROUTE14, MAP_ROUTE15,
-    MAP_SAFARI_ZONE_CENTER, MAP_SAFARI_ZONE_EAST,
-    MAP_SAFARI_ZONE_NORTH, MAP_SAFARI_ZONE_WEST,
-    MAP_ROUTE19, MAP_ROUTE20, MAP_ROUTE21,
-    MAP_SEAFOAM_ISLANDS_1F, MAP_SEAFOAM_ISLANDS_B1F,
-    MAP_SEAFOAM_ISLANDS_B2F, MAP_SEAFOAM_ISLANDS_B3F, MAP_SEAFOAM_ISLANDS_B4F,
-    MAP_POKEMON_MANSION_1F, MAP_POKEMON_MANSION_2F,
-    MAP_POKEMON_MANSION_3F, MAP_POKEMON_MANSION_B1F,
-};
-
-// Giovanni (Viridian): Prior + Victory Road (final gym, all areas)
-static const u16 sGiovanniGymAreas[] = {
-    MAP_ROUTE1, MAP_VIRIDIAN_FOREST, MAP_ROUTE2, MAP_ROUTE22,
-    MAP_ROUTE3, MAP_MT_MOON_1F, MAP_MT_MOON_B1F, MAP_MT_MOON_B2F,
-    MAP_ROUTE4, MAP_ROUTE24, MAP_ROUTE25,
-    MAP_ROUTE5, MAP_ROUTE6, MAP_ROUTE11, MAP_DIGLETTS_CAVE,
-    MAP_ROUTE7, MAP_ROUTE8, MAP_ROUTE9, MAP_ROUTE10,
-    MAP_ROCK_TUNNEL_1F, MAP_ROCK_TUNNEL_B1F,
-    MAP_ROUTE12, MAP_ROUTE13, MAP_ROUTE14, MAP_ROUTE15,
-    MAP_SAFARI_ZONE_CENTER, MAP_SAFARI_ZONE_EAST,
-    MAP_SAFARI_ZONE_NORTH, MAP_SAFARI_ZONE_WEST,
-    MAP_ROUTE19, MAP_ROUTE20, MAP_ROUTE21,
-    MAP_SEAFOAM_ISLANDS_1F, MAP_SEAFOAM_ISLANDS_B1F,
-    MAP_SEAFOAM_ISLANDS_B2F, MAP_SEAFOAM_ISLANDS_B3F, MAP_SEAFOAM_ISLANDS_B4F,
-    MAP_POKEMON_MANSION_1F, MAP_POKEMON_MANSION_2F,
-    MAP_POKEMON_MANSION_3F, MAP_POKEMON_MANSION_B1F,
-    MAP_ROUTE23, MAP_VICTORY_ROAD_1F, MAP_VICTORY_ROAD_2F, MAP_VICTORY_ROAD_3F,
-};
-
-// Gym area table structure
-struct GymAreaTable {
-    const u16 *maps;
-    u8 mapCount;
-};
-
-static const struct GymAreaTable sGymAreaTables[] = {
-    [0] = { sBrockGymAreas,    ARRAY_COUNT(sBrockGymAreas) },    // Brock
-    [1] = { sMistyGymAreas,    ARRAY_COUNT(sMistyGymAreas) },    // Misty
-    [2] = { sSurgeGymAreas,    ARRAY_COUNT(sSurgeGymAreas) },    // Lt. Surge
-    [3] = { sErikaGymAreas,    ARRAY_COUNT(sErikaGymAreas) },    // Erika
-    [4] = { sKogaGymAreas,     ARRAY_COUNT(sKogaGymAreas) },     // Koga
-    [5] = { sSabrinaGymAreas,  ARRAY_COUNT(sSabrinaGymAreas) },  // Sabrina
-    [6] = { sBlaineGymAreas,   ARRAY_COUNT(sBlaineGymAreas) },   // Blaine
-    [7] = { sGiovanniGymAreas, ARRAY_COUNT(sGiovanniGymAreas) }, // Giovanni
-};
-
-#define NUM_GYMS 8
+1. Add new argument parser option:
+```python
+parser.add_argument(
+    '--topics',
+    type=Path,
+    help='Path to map_topics.json (generates topic pools)'
+)
 ```
 
-Include the map constants header if not already included:
-```c
-#include "constants/map_groups.h"
+2. Add function to load topic config:
+```python
+def load_topic_config(topics_path: Path | None) -> dict:
+    """Load map_topics.json configuration."""
+    if topics_path is None or not topics_path.exists():
+        return {}
+    
+    with open(topics_path, 'r', encoding='utf-8') as f:
+        return json.load(f)
 ```
+
+3. Add function to group questions by category+topic:
+```python
+def group_by_topic(questions: dict[str, Question]) -> dict[tuple[str, str], list[str]]:
+    """Group question IDs by (category, topic) tuple."""
+    groups = defaultdict(list)
+    for qid, q in questions.items():
+        key = (q.category, q.sub_topic)
+        groups[key].append(qid)
+    return dict(groups)
+```
+
+4. Add function to sanitize topic names for C identifiers:
+```python
+def sanitize_topic_name(category: str, topic: str) -> str:
+    """Convert category+topic to valid C identifier."""
+    combined = f"{category}_{topic}"
+    sanitized = re.sub(r'[^a-zA-Z0-9]', '_', combined)
+    sanitized = re.sub(r'_+', '_', sanitized)  # Collapse multiple underscores
+    return sanitized.upper()
+```
+
+5. Add function to generate topic_pools.h:
+```python
+def generate_topic_pools_header(topic_groups: dict, out_dir: Path):
+    """Generate topic_pools.h with pool declarations."""
+    header_path = out_dir / 'include' / 'quiz' / 'topic_pools.h'
+    header_path.parent.mkdir(parents=True, exist_ok=True)
+    
+    lines = [
+        '#ifndef GUARD_TOPIC_POOLS_H',
+        '#define GUARD_TOPIC_POOLS_H',
+        '',
+        '// Auto-generated by build_questions.py - DO NOT EDIT',
+        '',
+        '#include "global.h"',
+        '#include "quiz/questions_gen.h"',
+        '',
+        '// Topic pool struct',
+        'struct QuizTopicPool',
+        '{',
+        '    const struct QuizQuestion * const *questions;',
+        '    u16 count;',
+        '};',
+        '',
+        '// Map config struct',
+        'struct QuizMapConfig',
+        '{',
+        '    u16 mapId;',
+        '    const struct QuizTopicPool * const *topicPools;',
+        '    u8 topicCount;',
+        '};',
+        '',
+        '// Topic pool declarations',
+    ]
+    
+    for (category, topic), qids in sorted(topic_groups.items()):
+        name = sanitize_topic_name(category, topic)
+        lines.append(f'extern const struct QuizTopicPool gQuizTopicPool_{name};')
+    
+    lines.extend([
+        '',
+        '// Lookup functions',
+        'const struct QuizTopicPool *Quiz_GetTopicPool(const char *category, const char *topic);',
+        'const struct QuizMapConfig *Quiz_GetMapConfig(u16 mapId);',
+        '',
+        '#endif // GUARD_TOPIC_POOLS_H',
+        ''
+    ])
+    
+    with open(header_path, 'w', encoding='utf-8') as f:
+        f.write('\n'.join(lines))
+    
+    print(f"Generated: {header_path}")
+```
+
+6. Add function to generate topic_pools.c:
+```python
+def generate_topic_pools_source(questions: dict, topic_groups: dict, topic_config: dict, out_dir: Path):
+    """Generate topic_pools.c with topic pool data."""
+    source_path = out_dir / 'src' / 'quiz' / 'topic_pools.c'
+    source_path.parent.mkdir(parents=True, exist_ok=True)
+    
+    lines = [
+        '// Auto-generated by build_questions.py - DO NOT EDIT',
+        '',
+        '#include "global.h"',
+        '#include "quiz/questions_gen.h"',
+        '#include "quiz/topic_pools.h"',
+        '#include "constants/map_groups.h"',
+        '',
+    ]
+    
+    # Generate topic pools
+    lines.append('// Topic pools')
+    for (category, topic), qids in sorted(topic_groups.items()):
+        name = sanitize_topic_name(category, topic)
+        valid_qids = [qid for qid in qids if qid in questions]
+        
+        if valid_qids:
+            # Question pointer array
+            lines.append(f'static const struct QuizQuestion * const sTopicQuestions_{name}[] = {{')
+            for qid in valid_qids:
+                safe_id = sanitize_id(qid)
+                lines.append(f'    &sQuestion_{safe_id},')
+            lines.append('};')
+            lines.append('')
+            
+            # Pool struct
+            lines.extend([
+                f'const struct QuizTopicPool gQuizTopicPool_{name} = {{',
+                f'    .questions = sTopicQuestions_{name},',
+                f'    .count = {len(valid_qids)},',
+                '};',
+                ''
+            ])
+    
+    # Generate map configs from topic_config
+    if 'question_pool_by_map' in topic_config:
+        lines.append('// Map topic pool configurations')
+        
+        for map_name, topics in topic_config['question_pool_by_map'].items():
+            safe_map = map_name.replace('MAP_', '')
+            
+            # Pool pointer array
+            lines.append(f'static const struct QuizTopicPool * const sMapPools_{safe_map}[] = {{')
+            for t in topics:
+                pool_name = sanitize_topic_name(t['category'], t['topic'])
+                lines.append(f'    &gQuizTopicPool_{pool_name},')
+            lines.append('};')
+            lines.append('')
+            
+            # Config struct
+            lines.extend([
+                f'static const struct QuizMapConfig sMapConfig_{safe_map} = {{',
+                f'    .mapId = {map_name},',
+                f'    .topicPools = sMapPools_{safe_map},',
+                f'    .topicCount = {len(topics)},',
+                '};',
+                ''
+            ])
+        
+        # Generate lookup function
+        lines.extend([
+            '// Map config lookup',
+            'const struct QuizMapConfig *Quiz_GetMapConfig(u16 mapId)',
+            '{',
+            '    switch (mapId)',
+            '    {',
+        ])
+        
+        for map_name in topic_config['question_pool_by_map'].keys():
+            safe_map = map_name.replace('MAP_', '')
+            lines.append(f'    case {map_name}:')
+            lines.append(f'        return &sMapConfig_{safe_map};')
+        
+        lines.extend([
+            '    default:',
+            '        return NULL;',
+            '    }',
+            '}',
+            ''
+        ])
+    
+    with open(source_path, 'w', encoding='utf-8') as f:
+        f.write('\n'.join(lines))
+    
+    print(f"Generated: {source_path}")
+```
+
+7. Update main() to call new generation functions:
+```python
+def main():
+    args = parse_args()
+    
+    # ... existing CSV parsing ...
+    
+    # Load topic config
+    topic_config = load_topic_config(args.topics)
+    
+    # Group questions by topic
+    topic_groups = group_by_topic(questions)
+    print(f"Found {len(topic_groups)} unique category+topic combinations")
+    
+    # Generate files
+    generate_header(questions, species_map, args.out_dir)
+    generate_source(questions, species_map, args.out_dir)
+    
+    # Generate topic pools if config provided
+    if topic_config:
+        generate_topic_pools_header(topic_groups, args.out_dir)
+        generate_topic_pools_source(questions, topic_groups, topic_config, args.out_dir)
+```
+
+8. Make question structs visible to topic_pools.c by changing `static` to non-static in questions_gen.c for the sQuestion_* structs, OR reference them via extern. Simplest approach: in questions_gen.c, change:
+   - `static const struct QuizQuestion sQuestion_` to `const struct QuizQuestion sQuestion_`
+   - Add declarations to questions_gen.h
+
+IMPORTANT: This requires careful coordination. Alternative: generate all topic pool data INSIDE questions_gen.c as part of the same generation step, avoiding cross-file references.
+
+Recommended approach: Generate topic pools INSIDE questions_gen.c (same file as question structs) to avoid extern complexity.
   </action>
-  <verify>
-- `grep "sGymAreaTables" pokefirered/src/quiz/quiz.c` returns matches
-- Tables compile without unknown MAP_* constants
-- `make` succeeds
-  </verify>
-  <done>
-Gym-to-prior-areas mapping tables defined for all 8 gyms with appropriate map constants.
-  </done>
+  <verify>Run build tool: `cd pokefirered && python3 tools/quiz/build_questions.py data/questions/questions.csv --mapping data/questions/species_map.json --topics data/questions/map_topics.json --out-dir .` generates both questions_gen.* and topic_pools.* files</verify>
+  <done>build_questions.py generates topic pools based on map_topics.json configuration</done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Implement dynamic area pool building functions</name>
-  <files>pokefirered/src/quiz/quiz.c</files>
+  <name>Task 2: Generate topic pools and verify compilation</name>
+  <files>
+    pokefirered/include/quiz/topic_pools.h
+    pokefirered/src/quiz/topic_pools.c
+  </files>
   <action>
-Replace the hardcoded Quiz_BuildAreaPool() with dynamic gym-based lookup.
+Run the updated build tool to generate topic pool files:
 
-1. **Add helper function** to get species from a map's wild encounters:
-
-```c
-// Add species from a map's wild encounters to the pool
-// Returns updated count
-static u8 Quiz_AddMapSpeciesToPool(u16 mapId, u8 count)
-{
-    const struct WildPokemonHeader *header;
-    const struct WildPokemonInfo *info;
-    const struct WildPokemon *mon;
-    u8 i;
-    
-    // Find the wild encounter header for this map
-    for (header = gWildMonHeaders; header->mapGroup != MAP_GROUP(MAP_UNDEFINED); header++)
-    {
-        if (header->mapGroup == MAP_GROUP(mapId) && header->mapNum == MAP_NUM(mapId))
-        {
-            // Add land mons
-            if (header->landMonsInfo != NULL)
-            {
-                info = header->landMonsInfo;
-                for (i = 0; i < LAND_WILD_COUNT; i++)
-                {
-                    mon = &info->wildPokemon[i];
-                    count = Quiz_AddBankToPool(Quiz_GetBank(mon->species), count);
-                }
-            }
-            
-            // Add water mons
-            if (header->waterMonsInfo != NULL)
-            {
-                info = header->waterMonsInfo;
-                for (i = 0; i < WATER_WILD_COUNT; i++)
-                {
-                    mon = &info->wildPokemon[i];
-                    count = Quiz_AddBankToPool(Quiz_GetBank(mon->species), count);
-                }
-            }
-            
-            // Add fishing mons
-            if (header->fishingMonsInfo != NULL)
-            {
-                info = header->fishingMonsInfo;
-                for (i = 0; i < FISH_WILD_COUNT; i++)
-                {
-                    mon = &info->wildPokemon[i];
-                    count = Quiz_AddBankToPool(Quiz_GetBank(mon->species), count);
-                }
-            }
-            
-            break;
-        }
-    }
-    
-    return count;
-}
+1. Execute the build script:
+```bash
+cd pokefirered
+python3 tools/quiz/build_questions.py \
+    data/questions/questions.csv \
+    --mapping data/questions/species_map.json \
+    --topics data/questions/map_topics.json \
+    --out-dir .
 ```
 
-2. **Add gym index detection** (or accept as parameter):
+2. Verify the generated files:
+- `include/quiz/topic_pools.h` should have:
+  - `struct QuizTopicPool` definition
+  - `struct QuizMapConfig` definition  
+  - `extern const struct QuizTopicPool gQuizTopicPool_*` for each category+topic
+  - Function declarations
 
-```c
-// Get gym index from current battle trainer
-// Returns 0-7 for gym leaders, -1 if not a gym battle
-static s8 Quiz_GetCurrentGymIndex(void)
-{
-    u16 trainerId = gTrainerBattleOpponent_A;
-    
-    // Map trainer IDs to gym indices
-    // These are the gym leader trainer IDs from trainers.h
-    switch (trainerId)
-    {
-    case TRAINER_BROCK:     return 0;
-    case TRAINER_MISTY:     return 1;
-    case TRAINER_LT_SURGE:  return 2;
-    case TRAINER_ERIKA:     return 3;
-    case TRAINER_KOGA:      return 4;
-    case TRAINER_SABRINA:   return 5;
-    case TRAINER_BLAINE:    return 6;
-    case TRAINER_GIOVANNI:  return 7;
-    default:                return -1;
-    }
-}
-```
+- `src/quiz/topic_pools.c` should have:
+  - Static question pointer arrays per topic
+  - `const struct QuizTopicPool gQuizTopicPool_*` structs
+  - Map config structs
+  - `Quiz_GetMapConfig(mapId)` lookup function
 
-3. **Replace Quiz_BuildAreaPool()** with dynamic version:
+3. If there are cross-file reference issues with question structs, adjust the approach:
+   
+   Option A: Move topic pool generation into questions_gen.c (recommended)
+   - Add topic pool structs and data directly in questions_gen.c
+   - Add declarations to questions_gen.h
+   - No separate topic_pools.h/c files needed
+   
+   Option B: Make question structs extern
+   - Change `static const struct QuizQuestion sQuestion_*` to `const struct QuizQuestion sQuestion_*`
+   - Add `extern const struct QuizQuestion sQuestion_*;` to questions_gen.h
+   - This works but pollutes the header with many declarations
 
-```c
-// Build aggregate question pool from all maps prior to current gym
-// Returns number of questions added to the pool
-static u8 Quiz_BuildAreaPool(void)
-{
-    s8 gymIndex;
-    const struct GymAreaTable *areaTable;
-    u8 count = 0;
-    u8 i;
-    
-    gymIndex = Quiz_GetCurrentGymIndex();
-    
-    // If not a gym battle or unknown gym, fall back to full pool
-    if (gymIndex < 0 || gymIndex >= NUM_GYMS)
-        return Quiz_BuildFullPool();
-    
-    areaTable = &sGymAreaTables[gymIndex];
-    
-    // Add species from each map in the gym's area list
-    for (i = 0; i < areaTable->mapCount; i++)
-    {
-        count = Quiz_AddMapSpeciesToPool(areaTable->maps[i], count);
-    }
-    
-    // If we somehow got 0 questions, fall back to full pool
-    if (count == 0)
-        return Quiz_BuildFullPool();
-    
-    return count;
-}
-```
-
-4. **Add required includes**:
-```c
-#include "wild_encounter.h"  // For gWildMonHeaders, WildPokemonHeader, etc.
-#include "constants/trainers.h"  // For TRAINER_BROCK, etc.
-```
-
-5. **Verify duplicate handling**: Quiz_AddBankToPool already handles NULL banks, but the same species might appear multiple times in different encounter slots. The pool allows duplicates (they get shuffled and removed as used). This is acceptable - it means common species have more representation.
-
-6. Build and test:
+4. Verify the build:
 ```bash
 cd pokefirered && make -j4
 ```
   </action>
-  <verify>
-- `grep "Quiz_BuildAreaPool" pokefirered/src/quiz/quiz.c` shows new dynamic implementation
-- `grep "Quiz_AddMapSpeciesToPool" pokefirered/src/quiz/quiz.c` shows helper function
-- `grep "Quiz_GetCurrentGymIndex" pokefirered/src/quiz/quiz.c` shows gym detection
-- Hardcoded species list (SPECIES_RATTATA, SPECIES_PIDGEY, etc.) no longer in Quiz_BuildAreaPool
-- `make` succeeds without errors
-  </verify>
-  <done>
-Quiz_BuildAreaPool() dynamically aggregates species from prior areas based on gym index, replacing hardcoded species list.
-  </done>
+  <verify>Full build: `cd pokefirered && make -j4 2>&1 | tail -20` completes without errors, topic_pools.o is created</verify>
+  <done>Topic pool files generated and compile successfully, Quiz_GetMapConfig() is available</done>
+</task>
+
+<task type="auto">
+  <name>Task 3: Add Quiz_GetQuestionsForMap helper function</name>
+  <files>
+    pokefirered/include/quiz/topic_pools.h
+    pokefirered/src/quiz/topic_pools.c
+  </files>
+  <action>
+Add a convenience function that selects a random question from a map's topic pools:
+
+1. Add declaration to topic_pools.h (or questions_gen.h if integrated):
+```c
+// Select a random question from the map's topic pools
+const struct QuizQuestion *Quiz_GetRandomQuestionForMap(u16 mapId);
+
+// Get count of available questions for a map
+u16 Quiz_GetQuestionCountForMap(u16 mapId);
+```
+
+2. Add implementation to topic_pools.c (or questions_gen.c):
+```c
+#include "random.h"  // For Random()
+
+const struct QuizQuestion *Quiz_GetRandomQuestionForMap(u16 mapId)
+{
+    const struct QuizMapConfig *config;
+    const struct QuizTopicPool *pool;
+    u16 totalQuestions = 0;
+    u16 selectedIndex;
+    u8 i;
+    
+    config = Quiz_GetMapConfig(mapId);
+    if (config == NULL || config->topicCount == 0)
+        return NULL;
+    
+    // Count total questions across all topic pools
+    for (i = 0; i < config->topicCount; i++)
+    {
+        pool = config->topicPools[i];
+        if (pool != NULL)
+            totalQuestions += pool->count;
+    }
+    
+    if (totalQuestions == 0)
+        return NULL;
+    
+    // Select random question index
+    selectedIndex = Random() % totalQuestions;
+    
+    // Find the question at that index
+    for (i = 0; i < config->topicCount; i++)
+    {
+        pool = config->topicPools[i];
+        if (pool == NULL)
+            continue;
+        
+        if (selectedIndex < pool->count)
+            return pool->questions[selectedIndex];
+        
+        selectedIndex -= pool->count;
+    }
+    
+    return NULL;  // Shouldn't reach here
+}
+
+u16 Quiz_GetQuestionCountForMap(u16 mapId)
+{
+    const struct QuizMapConfig *config;
+    const struct QuizTopicPool *pool;
+    u16 count = 0;
+    u8 i;
+    
+    config = Quiz_GetMapConfig(mapId);
+    if (config == NULL)
+        return 0;
+    
+    for (i = 0; i < config->topicCount; i++)
+    {
+        pool = config->topicPools[i];
+        if (pool != NULL)
+            count += pool->count;
+    }
+    
+    return count;
+}
+```
+
+3. Rebuild and verify:
+```bash
+cd pokefirered && make -j4
+```
+  </action>
+  <verify>Build compiles: `cd pokefirered && make -j4 2>&1 | grep -E "(error|undefined)" | head -5` shows no errors</verify>
+  <done>Quiz_GetRandomQuestionForMap() and Quiz_GetQuestionCountForMap() available for quiz.c to use</done>
 </task>
 
 </tasks>
 
 <verification>
-1. Gym area tables defined for all 8 gyms (Brock through Giovanni)
-2. Quiz_AddMapSpeciesToPool() iterates wild encounter data for a map
-3. Quiz_BuildAreaPool() uses gym index to select appropriate area table
-4. Hardcoded species list removed from Quiz_BuildAreaPool()
-5. Falls back to full pool if gym index unknown
-6. Project builds without errors
+1. `python3 tools/quiz/build_questions.py --topics` generates topic pool files
+2. Topic pools contain questions grouped by Broad_Category + Sub_Topic
+3. Quiz_GetMapConfig(mapId) returns correct pool references for configured maps
+4. Quiz_GetRandomQuestionForMap(mapId) returns a valid question
+5. `cd pokefirered && make -j4` builds successfully
 </verification>
 
 <success_criteria>
-- [ ] Gym area progression tables defined for 8 gyms
-- [ ] Quiz_AddMapSpeciesToPool() helper function created
-- [ ] Quiz_GetCurrentGymIndex() returns correct gym index
-- [ ] Quiz_BuildAreaPool() uses dynamic lookup instead of hardcoded list
-- [ ] `make` succeeds
-- [ ] Gym battles have access to progressively more questions based on progression
+- build_questions.py accepts --topics argument for map_topics.json
+- All unique category+topic combinations become topic pools
+- Each map in map_topics.json has a QuizMapConfig with pool references
+- Topic pool data is static const (ROM, not RAM)
+- Build compiles and links without errors
 </success_criteria>
 
 <output>
